# employee-records-service

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/2022-05-29-162957_create_department/: up.sql
migrations/2022-05-29-182514_create_employees/: up.sql
src/: db_connection.rs  main.rs  models.rs  repo.rs  routes.rs  schema.rs
